fix(yalb-1104): alignment fix - change apect-ratio to img instead of parent

--- a/components/02-molecules/cards/reference-card/_yds-reference-card.scss
+++ b/components/02-molecules/cards/reference-card/_yds-reference-card.scss
@@ -64,7 +64,9 @@ $break-card-collection-list-image-max: tokens.$break-s - 0.05;
 
   @media (min-width: tokens.$break-mobile) {
     [data-collection-type='grid'] & {
-      aspect-ratio: 3/2;
+      img {
+        aspect-ratio: 3/2;
+      }
     }
 
     [data-collection-type='list'] & {
